Fixed [Bug][Frontend][IE] System displays 2 scrollbars https://app.asana.com/0/39245109728504/92940423894534

--- a/app/assets/style/main.css
+++ b/app/assets/style/main.css
@@ -259,6 +259,7 @@ div.ui-input-text textarea.ui-input-text,
 }
 .swiper-slide {
     height: 100% !important;
+    -ms-overflow-style: none !important;
 }
 .swiper-wrapper {
     height: 100% !important;
